cape teleport entry swap

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,7 @@
 displayName=Example
 author=Nobody
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=Alerts you when you have nothing equipped in your head slot
+tags=hint,gear,head
+plugins=com.example.capeCheckPlugin
+
